--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -7,6 +7,6 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
-label,h1,h2,p,.nav-link {
+label,h1,h2,p,.nav-link ,.nav-link1,button,.fh{
     font-family: 'Playfair Display', serif;
 }
