--- a/my-app/src/Pages/Home.css
+++ b/my-app/src/Pages/Home.css
@@ -1,8 +1,7 @@
 .o{
     height: 63vh;
-    width: 100vw;
     display: flex;
-    padding: 60px;
+    padding: 50px;
     gap: 60px;
     align-items: center;
 }
@@ -22,7 +21,6 @@
     box-shadow: inset(4px,4px,4px,4px);
 }
 .gu{
-    width: 100vw;
     height: 50vh;
     background-color: rgb(210,230,255);
     display: flex;
@@ -32,7 +30,7 @@
     gap: 20px;
 }
 .y{
-    height: 40vh;
+    height: 45vh;
     width: 20vw;
     border-radius: 20px;
     padding: 30px;
@@ -43,6 +41,7 @@
     box-shadow: 4px 4px 10px rgba(0.1, 0.1, 0.1, 0.2);
     animation: fk;
     animation-duration: 2s; 
+    flex-shrink: 0;
 }
 @keyframes fk {
     from{
@@ -68,4 +67,14 @@
     gap: 20px;
     background-color: rgb(210,230,255);
     animation: name duration timing-function delay iteration-count direction fill-mode;
+}
+@media(max-width:1366px)
+{
+    .y{
+        width: 20vw;
+        height: 50vh;
+    }
+    .df{
+        font-size: 15px;
+    }
 }
