--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,12 +1,12 @@
 *{
-    font-family: sans-serif;
+    font-family: 'Poppins';
     margin: 0;
     padding: 0;
 }
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins';
 }
 
 label,h1,h2,p,.nav-link ,.nav-link1,button,.fh{
-    font-family: 'Playfair Display', serif;
+    font-family: 'Poppins';
 }
