--- a/my-app/src/Pages/Footer.css
+++ b/my-app/src/Pages/Footer.css
@@ -1,11 +1,11 @@
 .f-main{
     height: 35vh;
-    width: 98.99vw;
     background-image: linear-gradient(to right,rgb(0,52,105),rgb(0,96,193));
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 50px;
+    font-size: 13px;
 }
 .kl{
     color: whitesmoke;
