--- a/my-app/src/Components/Card.css
+++ b/my-app/src/Components/Card.css
@@ -8,6 +8,7 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
+    background-color: rgb(210,230,255);
 }
 .c-main{
     color: black;
