--- a/my-app/src/Components/Card.css
+++ b/my-app/src/Components/Card.css
@@ -13,19 +13,15 @@
 .c-main{
     color: black;
 }
-.progress{
-    border: 1px solid black;
-    border-radius: 10px;
-    padding: 5px;
+.progress:hover {
+    transform: scale(1.06);
+    cursor: pointer;
 }
 .ju{
     width: 7vw;
     border-radius: 3px;
 }
-.card-loc{
-    height: 3vh;
-    width: 1vw;
-}
+
 .image{
     height: 16vh;
     width: 11vw;
