--- a/my-app/src/Pages/Report.css
+++ b/my-app/src/Pages/Report.css
@@ -13,7 +13,7 @@ button{
     justify-content: center;
     width: 40vw;
     border-radius: 5px;
-    height: 50px;
+    height: 7vh;
     padding: 7px;
     font-size: 25px;
     background-color: blue;
